# Aurora

./: .bandit.baseline  .coveragerc  .env  .gitignore  .gitleaks.toml  .gitleaksignore  .gitmessage.txt  .pre-commit-config.yaml  .pytestignore  .secrets.baseline  .vulture-whitelist.py  =4.21  CHANGELOG.md  CLEANUP_PLAN.md  CLEANUP_SESSION_CONTEXT.md  CLEANUP_SUMMARY.md  CONFIGURATION.md  CONTEXT_ORGANIZATION_SUMMARY.md  CONTRIBUTING.md  DEPRECATED_FILES_LIST.md  DISCORD_SETUP_GUIDE.md  EMERGENCY_COMMANDS.md  END_TO_END_TESTING_GUIDE.md  ENHANCED_SYSTEM_SUMMARY.md  FINAL_STATUS_UPDATE.md  FINAL_SYSTEM_CHECKLIST.md  GO_LIVE_RUNBOOK.md  IBKR_INTEGRATION_SUMMARY.md  LAUNCH_SEQUENCE_LOG.md  LICENSE  LOG_FILTERS.md  MASTER_CONTEXT.md  MASTER_DOCUMENTATION.md  Makefile  NEXT_SESSION_QUICK_REFERENCE.md  NOTICE  PRODUCTION_LAUNCH_MANIFEST.md  PUBLIC_PRESENTATION.md  QUICK_REFERENCE_COMMANDS.md  README.md  (+65 more)
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  pull_request_template.md
.perf/: small_profile.pstats
ALPACA_trading/: FILE_LIST.md  add_license_headers.py
api/: README.md  demo_server.py
apps/: README.md  walk_cli.py
attic/: .KEEP  CLEANUP_LOG.txt  CLEANUP_SUMMARY.md  ENHANCED_FEATURES_SUMMARY.md  ENHANCED_SYSTEM_SUMMARY.md  FILE_INDEX.txt  IBKR_SETUP_GUIDE.md  TRADING_PERFORMANCE_GUIDE.md  dashboard.py  diagnose_ibkr.py  simple_dashboard.py  test_enhanced_system.py  test_ibkr_connection.py  test_ibkr_integration.py  validate_system.py
baselines/: model_dummy_v1.json  spy_golden.json
brokers/: README.md  __init__.py  data_provider.py  example_venue.py  ibkr.py  ibkr_broker.py  interface.py  paper.py  realtime_feed.py
catboost_info/: catboost_training.json
checklists/: paper_ready.yaml
cli/: README.md  __init__.py  backtest.py  mvb.py  paper.py
config/: README.md  adversarial_test_config.json  aggressive_ml_backtest.json  alpaca_credentials.yaml.example  assets.yaml  backtest_config.json  base.json  base.yaml  baseline.json  bh_test_config.json  composer_config.json  config.yaml  consistency_test_config.json  data_sanity.yaml  data_schema.yaml  deployment.yaml  dl.yaml  dl_small.yaml  enhanced_paper_trading_config.json  enhanced_paper_trading_config.json.backup  ensemble_v2.yaml  execution.yaml  experiment_profiles.yaml  features.yaml  gatekeeper_budgets.yaml  gates_adaptive.yaml  gates_smoke.yaml  go_nogo.yaml  grid.yaml  hierarchical_risk.yaml  ibkr_config.json  labels.yaml  live_config.json  live_config_ibkr.json  live_profile.json  ml_backtest_aapl.json  ml_backtest_btc.json  ml_backtest_config.json  ml_backtest_goog.json  ml_backtest_test_config.json  (+37 more)
configs/: datasanity_rules.dev.yaml  datasanity_rules.prod.yaml  datasanity_rules.yaml  defaults.yaml  paper.yaml  prod.yaml  research.yaml  wfv.yaml
context/: 01_SYSTEM_OVERVIEW.md  02_CRITICAL_ISSUES.md  03_DEVELOPMENT_PHILOSOPHY.md  04_SYSTEM_ARCHITECTURE.md  05_NEXT_SESSION_PLAN.md  BRANCH_CONTEXT.md  README.md  fix_gauntlet_branch_context.md  main_branch_context.md  production_branch_context.md
contexts/: decision_core.md  invariants.md
contracts/: README.md  crypto_features.yaml  dtypes.yaml  flags.yaml  run_report.schema.json  snapshot.yaml  timezone.yaml
core/: README.md  alerts.py  config.py  config_loader.py  contracts.py  data_sanity.py  decision_core.py  enhanced_logging.py  factory.py  feature_reweighter.py  flags.py  io_quarantine.py  model_router.py  mvb_runner.py  notifications.py  objectives.py  performance.py  portfolio.py  regime_detector.py  strategy.py  strategy_selector.py  trade_logger.py  utils.py
data/: README.md  adversarial_spy.csv
dl/: __init__.py  infer.py  models.py  train.py
docs/: ALPACA_PAPER_TRADING_DEPENDENCIES.md  ALPHA_SOURCE_MASTER_PLAN.md  ALPHA_SOURCE_ROADMAP.md  ALPHA_V1_CLEANUP_PROPOSAL.md  ALPHA_V1_DEPENDENCIES.md  ALPHA_V1_SYSTEM_OVERVIEW.md  ALPHA_V1_WALKFORWARD_GUIDE.md  ARCHITECTURE_OVERVIEW.md  ASSET_SPECIFIC_MODELS_STATUS.md  AUDIT_SUMMARY.md  AUTOMATED_PAPER_TRADING_GUIDE.md  BRANCH_MANAGEMENT_GUIDE.md  BUFFER_BASED_POSITION_SIZING.md  (+65 more)
mutants/: pyproject.toml
mutants/core/data_sanity/: __init__.py  api.py  clean.py  codes.py  columnmap.py  datetime.py  errors.py  group.py  invariants.py
mutants/tests/: cases.yaml  conftest.py  test_composer_end_to_end.py  test_composite_score.py  test_data_integrity.py  test_data_sanity_enforcement.py  test_dtype_casting.py  test_properties.py  test_returns_calc.py  test_v02_modules.py
mutants/tests/backtest/: test_clamp_weights.py  test_datasanity_inf.py  test_datasanity_nan.py  test_exposure_guards.py  test_golden_regression.py  test_trading_costs_guard.py
mutants/tests/brokers/: test_ibkr_unit.py
mutants/tests/datasanity/: _golden.py  _mutate.py  test_contract_timestamps.py  test_lookahead.py  test_mutations.py  test_nan_inf_ohlc.py  test_property_invariants.py
mutants/tests/e2e/: __init__.py  test_end_to_end.py  utils.py
mutants/tests/fixtures/: __init__.py  gen_fixture.py
mutants/tests/golden/: test_golden_regression.py
mutants/tests/helpers/: assertions.py
mutants/tests/live/: test_canary_limits.py  test_canary_runner_tmp_isolated.py  test_profile_overlay.py
mutants/tests/meta/: test_meta_core.py
mutants/tests/ml/: test_alpha_eval_contract.py  test_feature_stats.py  test_leakage_guards.py  test_model_golden.py  test_model_runtime.py  test_score_mapping.py
mutants/tests/smoke/: test_smoke_cues.py  test_smoke_datasanity_contract.py
mutants/tests/unit/: test_dtype_drift.py  test_duplicates_timestamps.py  test_lookahead.py  test_nonfinite.py  test_price_bounds.py  test_timezone_enforcement.py
mutants/tests/util/: corruptions.py
mutants/tests/utils/: test_orders_kv.py  test_pre_trade_tripwires.py  test_quotes_provider_ibkr.py
mutants/tests/walkforward/: test_data_sanity_integration.py  test_datasanity_duplicates.py  test_datasanity_empty.py  test_datasanity_nan_walkforward.py  test_datasanity_non_mono.py  test_fold_integrity.py  test_metrics_consistency.py  test_no_lookahead.py  test_repro_and_parallel.py  test_short_fold_policy.py  test_smoke_determinism.py
(+3525 files in other folders)
