[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aurora-trader"
version = "0.1.0"
description = "Production-grade ML trading system"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "xgboost>=2.0.0",
    "onnx>=1.14.0",
    "onnxruntime>=1.16.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-benchmark>=4.0.0",
    "hypothesis>=6.80.0",
    "ruff>=0.6.0",
    "mypy>=1.5.0",
    "bandit>=1.7.5",
    "pip-audit>=2.6.0",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

# Ignore missing imports for now
ignore_missing_imports = true

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = [
    "mutants",
    "attic",
    "**/__pycache__",
    "**/.git",
    "**/.venv",
    "**/venv",
    "**/.env",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings  
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "C4",  # flake8-comprehensions
    "PIE", # flake8-pie
    "T20", # flake8-print
    "RET", # flake8-return
    "TCH", # flake8-type-checking
]
ignore = [
    # Safe to ignore (handled by formatter)
    "E501",  # Line too long (handled by formatter)
    "W291",  # Trailing whitespace (handled by formatter)
    "W293",  # Blank line contains whitespace (handled by formatter)
    "I001",  # Import sorting (handled by formatter)
    
    # Style/readability - defer to later cleanup
    "SIM102", # Nested if statements (style)
    "SIM105", # Use contextlib.suppress (style)
    "SIM108", # Use ternary operator (style)
    "RET504", # Unnecessary assignment (style)
    "C401",  # Unnecessary generator (style)
    "B007",  # Loop control variable not used (style)
    "UP038", # Use X | Y in isinstance (style)
    "TC003", # Move standard library import (style)
    
    # Temporarily defer - plan to enable soon
    "B904",  # Exception chaining (improves debuggability)
    "B011",  # Do not assert False (allow in tests only)
]
# CRITICAL: B023, B905, E702, E712, F841, F401 are NOT ignored - they are enforced
# These catch real bugs and must not be re-ignored without explicit justification

[tool.ruff.lint.per-file-ignores]
"scripts/**/*.py" = ["T201"]  # Allow prints in scripts
"tests/**/*.py" = ["T201", "B011", "E501"]  # Allow prints/assert False in tests

[tool.ruff.lint.isort]
known-first-party = ["core", "scripts", "tests"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config --ignore=mutants --ignore=attic --ignore=attic_pending"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "e2e: marks tests as end-to-end tests",
    "benchmark: marks tests as benchmarks",
    "smoke: deterministic minimum-path tests",
    "quarantine: unstable/flaky; excluded from CI by default",
    "sanity: data sanity validation tests",
]

[tool.coverage.run]
source = ["core", "scripts", "oms"]
omit = [
    "tests/*",
    "mutants/*",
    "attic/*",
    "*/conftest.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

[tool.bandit]
exclude_dirs = ["tests", "mutants", "attic"]
skips = ["B101", "B601"]  # Skip assert_used and shell=True (controlled usage)

[tool.bandit.assert_used]
skips = ["**/tests/**/*.py"]